--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,5 @@ spring.datasource.url=jdbc:mysql://localhost/spring_study
 spring.datasource.username=spring_study_user
 spring.datasource.password=spring_study_user
 spring.jpa.hibernate.ddl-auto=validate
+
+server.error.include-stacktrace=never
