Add token generation when user authenticates

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,5 @@ spring.datasource.password=spring_study_user
 spring.jpa.hibernate.ddl-auto=validate
 
 server.error.include-stacktrace=never
+
+api.security.token.secret=${JWT_SECRET:U3ByaW5nIFN0dWR5}
