Add infos about application build

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,9 @@ spring.datasource.username=spring_study_user
 spring.datasource.password=spring_study_user
 spring.jpa.hibernate.ddl-auto=validate
 
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
 server.error.include-stacktrace=never
 
 api.security.token.secret=${JWT_SECRET:U3ByaW5nIFN0dWR5}
